--- a/auth-api-prisma/package.json
+++ b/auth-api-prisma/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@prisma/client": "^6.13.0",
     "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
